tests/vertical-slice/accept/cross_module_fn_value_shadow/helpers.hew
pub fn double(x: i64) -> i64 {
    x * 2
}
