tests/vertical-slice/reject/ambig_mod/ambig_mod.hew
pub fn val() -> i64 { 2 }
